--- a/Games/SorryDicedGame/Blazor/Views/SorryDicedGameMainView.razor
+++ b/Games/SorryDicedGame/Blazor/Views/SorryDicedGameMainView.razor
@@ -4,7 +4,7 @@
 
 <CompleteDiceRollerComponent ImageHeight="15vh" />
 <CompleteStartComponent ImageHeight="6vh"
-    
+    StartPieceChosen="ChooseStartCommand"
     Players="DataContext!.MainGame.PlayerList" />
 
 <LabelGridComponent DataContext="DataContext!.VMData" Labels="_labels" />
