Finished the home and waiting areas. Plus allowed dice to be selected. And allowing to be disabled if either no move is available or you used the move.

--- a/Games/SorryDicedGame/Blazor/CompleteDiceRollerComponent.razor
+++ b/Games/SorryDicedGame/Blazor/CompleteDiceRollerComponent.razor
@@ -3,7 +3,10 @@
         @foreach (var item in DiceList)
         {
             <StackItem>
-                <SorryDiceComponent TargetHeight="@ImageHeight" Dice="item" />
+                <SorryDiceComponent TargetHeight="@ImageHeight" 
+                    CommandObject="DiceCommand"
+                    CommandParameter="item"
+                    Dice="item" />
                 @* <div @onclick="() => SelectDiceAsync(item)">
                     <BasicDiceBlazor TargetHeight="@ImageHeight" Dice="item" />
                 </div> *@
