--- a/Games/SorryDicedGame/Blazor/TemporaryBoard.razor
+++ b/Games/SorryDicedGame/Blazor/TemporaryBoard.razor
@@ -1,5 +1,4 @@
-﻿@using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards
-@if (HowMany > 4)
+﻿@if (HowMany > 4)
 {
     <div>
         Cannot have more than 4 pawn pieces
