--- a/Games/SorryDicedGame/_Imports.razor
+++ b/Games/SorryDicedGame/_Imports.razor
@@ -19,3 +19,4 @@
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
 @using BasicBlazorLibrary.Components.CssGrids
 @using BasicBlazorLibrary.Components.Repeaters
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.GameBoards
