Enabling the clicking on the sorry boards for sorry diced game. Gives the proper information so whoever handles it can decide what to do.

--- a/Games/SorryDicedGame/Blazor/CompletePlayerBoardComponent.razor
+++ b/Games/SorryDicedGame/Blazor/CompletePlayerBoardComponent.razor
@@ -7,7 +7,10 @@
         @if (Players.Count >= item.index + 1)
         {
             <GridItem Column="item.column" Row="item.row">
-                <PlayerBoard Player="Players[item.index]"
+                <PlayerBoard 
+                    OnHomeClicked="OnHomeClicked"
+                    OnWaitingClicked="OnWaitingClicked"
+                    Player="Players[item.index]"
                     ImageHeight="@ImageHeight"
                 />
             </GridItem>
