Enabling all the basic actions for sorry diced game. For now, everything is allowed. I have to decide hard coded whether its slide or not. Next will figure out proper moves and making real moves.

--- a/Games/SorryDicedGame/Blazor/CompletePlayerBoardComponent.razor
+++ b/Games/SorryDicedGame/Blazor/CompletePlayerBoardComponent.razor
@@ -9,6 +9,7 @@
             <GridItem Column="item.column" Row="item.row">
                 <PlayerBoard 
                     OnHomeClicked="OnHomeClicked"
+                    BoardList="BoardList"
                     OnWaitingClicked="OnWaitingClicked"
                     Player="Players[item.index]"
                     ImageHeight="@ImageHeight"
