--- a/Games/SorryDicedGame/Blazor/CompleteStartComponent.razor
+++ b/Games/SorryDicedGame/Blazor/CompleteStartComponent.razor
@@ -1,4 +1,4 @@
-﻿@if (SorryDicedGameGameContainer.CanStart == false)
+﻿@if (SorryDicedGameGameContainer.CanStart == false || SorryDicedGameGameContainer.IsGameOver)
 {
     return;
 }
@@ -11,7 +11,7 @@
         @foreach (var player in Players)
         {
             <GridItem Column="column" Row="row">
-                <TemporaryBoard HowMany="4" ImageHeight="@ImageHeight" OnChoseColor=PrivateChoseColorAsync ColorUsed="player.Color" />
+                <TemporaryBoard HowMany="@HowMany(player)" ImageHeight="@ImageHeight" OnChoseColor=PrivateChoseColorAsync ColorUsed="player.Color" />
             </GridItem>
             column++;
             if (column > 2)
