Completed Sorry Diced Game.

--- a/Games/SorryDicedGame/Blazor/CompletePlayerBoardComponent.razor
+++ b/Games/SorryDicedGame/Blazor/CompletePlayerBoardComponent.razor
@@ -2,19 +2,19 @@
 {
     return;
 }
-<GridTwoByTwo ColumnGap="5px" ColumnLength="@Columns">
-    <GridRepeater TotalColumns="2" TotalRows="2" Context="item">
-        @if (Players.Count >= item.index + 1)
-        {
-            <GridItem Column="item.column" Row="item.row">
-                <PlayerBoard 
-                    OnHomeClicked="OnHomeClicked"
-                    BoardList="BoardList"
-                    OnWaitingClicked="OnWaitingClicked"
-                    Player="Players[item.index]"
-                    ImageHeight="@ImageHeight"
-                />
-            </GridItem>
-        }
-    </GridRepeater>
-</GridTwoByTwo>
+<RefreshComponent CanRender=_canRender>
+    <GridTwoByTwo ColumnGap="5px" ColumnLength="@Columns">
+        <GridRepeater TotalColumns="2" TotalRows="2" Context="item">
+            @if (Players.Count >= item.index + 1)
+            {
+                <GridItem Column="item.column" Row="item.row">
+                    <PlayerBoard OnHomeClicked="OnHomeClicked"
+                                 BoardList="BoardList"
+                                 OnWaitingClicked="OnWaitingClicked"
+                                 Player="Players[item.index]"
+                                 ImageHeight="@ImageHeight" />
+                </GridItem>
+            }
+        </GridRepeater>
+    </GridTwoByTwo>
+</RefreshComponent>
