--- a/Games/SorryDicedGame/Blazor/CompleteStartComponent.razor
+++ b/Games/SorryDicedGame/Blazor/CompleteStartComponent.razor
@@ -2,24 +2,25 @@
 {
     return;
 }
-<BaseFrameBlazor Text="Start" >
-    <GridTwoByTwo ColumnLength="@Columns">
-        @{
-            int row = 1;
-            int column = 1;
-        }
-        @foreach (var player in Players)
-        {
-            <GridItem Column="column" Row="row">
-                <TemporaryBoard HowMany="@HowMany(player)" ImageHeight="@ImageHeight" OnChoseColor=PrivateChoseColorAsync ColorUsed="player.Color" />
-            </GridItem>
-            column++;
-            if (column > 2)
-            {
-                column = 1;
-                row = 2;
+<RefreshComponent CanRender=_canRender>
+    <BaseFrameBlazor Text="Start">
+        <GridTwoByTwo ColumnLength="@Columns">
+            @{
+                int row = 1;
+                int column = 1;
             }
-        }
-    </GridTwoByTwo>
-    
-</BaseFrameBlazor>
+            @foreach (var player in Players)
+            {
+                <GridItem Column="column" Row="row">
+                    <TemporaryBoard HowMany="@HowMany(player)" ImageHeight="@ImageHeight" OnChoseColor=PrivateChoseColorAsync ColorUsed="player.Color" />
+                </GridItem>
+                column++;
+                if (column > 2)
+                {
+                    column = 1;
+                    row = 2;
+                }
+            }
+        </GridTwoByTwo>
+    </BaseFrameBlazor>
+</RefreshComponent>
