--- a/Games/DealCardGame/_Imports.razor
+++ b/Games/DealCardGame/_Imports.razor
@@ -23,3 +23,4 @@
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.DrawPiles;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.SingleMiscPiles;
 @using BasicGameFrameworkLibrary.Core.RegularDeckOfCards;
+@using BasicBlazorLibrary.Components.Repeaters
