--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -4,30 +4,28 @@
     return;
 }
 @{
-    bool isTesting = true;
+    bool isTesting = false;
 }
-
 @if (isTesting)
 {
     <TestCardComponent />
     return;
 }
-<StackLayout>
-    <StackItem>
-        <DrawPileBlazor DeckPile="_vmData.Deck1" />
-    </StackItem>
-    <StackItem>
-        <SingleMiscPileBlazor SinglePile="_vmData.Pile1" />
-    </StackItem>
-    <StackItem>
-        Yours
-    </StackItem>
-</StackLayout>
-<StackLayout>
-    <StackItem>
-        <div>
-            <HandBlazor Hand="_vmData.PlayerHand1" />
-        </div>
+<GridContainer Rows="@Rows" ColumnGap="5px" RowGap=5px Columns="auto 35vw 1fr">
+    <GridItem Row="1" Column="1">
+        <StackLayout>
+            <StackItem>
+                <DrawPileBlazor DeckPile="_vmData.Deck1" />
+            </StackItem>
+            <StackItem>
+                <SingleMiscPileBlazor SinglePile="_vmData.Pile1" />
+            </StackItem>
+        </StackLayout>
+    </GridItem>
+    <GridItem Column="2" Row="1">
+        <HandBlazor TargetContainerSize="35vw" Hand="_vmData.PlayerHand1" />
+    </GridItem>
+    <GridItem Row="2" Column="1" ColumnSpan="2">
         <div>
             <LabelGridComponent DataContext="_vmData" Labels="_labels" />
         </div>
@@ -36,24 +34,12 @@
                               Columns="_scores"
                               Players="_gameContainer.SaveRoot.PlayerList" />
         </div>
-    </StackItem>
-    @* <StackItem Length="1fr">
-        <GridContainer Height="70vh" Columns="1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr" Rows="1fr 1fr 1fr 1fr">
-            <BasicBlazorLibrary.Components.Repeaters.GridRepeater TotalColumns="10" TotalRows="4" Context="item">
-                <GridItem Row="@item.row" Column="@item.column">
-                    @{
-                        var list = GetCards(item.column);
-                    }
-                    @foreach (var item in list)
-                    {
-                        <div>
-                            <CardGraphicsBlazor DeckObject="item" TargetHeight="4vh" />
-                        </div>
-                        
-                    }
-                </GridItem>
-            </BasicBlazorLibrary.Components.Repeaters.GridRepeater>
-        </GridContainer>
-    </StackItem> *@
-</StackLayout>
+    </GridItem>
+    <GridItem Column="3" Row="1" RowSpan="3">
+        <CompletePlayerSetsComponent Players="GetPlayers()" />
+    </GridItem>
+
+</GridContainer>
+
+
 
