Drawing either 2 or 5 cards at the start of the turn for deal card game (except for computer players). Also, playing the go card.  Showing the highlighting properly.

--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -27,6 +27,9 @@
     </GridItem>
     <GridItem Row="2" Column="1" ColumnSpan="2">
         <div>
+            <GameButtonComponent Display="Play" CommandObject="PlayCommand" />
+        </div>
+        <div>
             <LabelGridComponent DataContext="_vmData" Labels="_labels" />
         </div>
         <div>
