Being able to end turn on deal card game. For now, you can end turn at any time.  Eventually will change that (when i make more progress in the game).

--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -28,6 +28,7 @@
     <GridItem Row="2" Column="1" ColumnSpan="2">
         <div>
             <GameButtonComponent Display="Play" CommandObject="PlayCommand" />
+            <GameButtonComponent Display="End Turn" CommandObject="EndTurnCommand" />
         </div>
         <div>
             <LabelGridComponent DataContext="_vmData" Labels="_labels" />
