Start on organizing sets so properties can be played.

--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -45,7 +45,7 @@
         }
     </GridItem>
     <GridItem Column="3" Row="1" RowSpan="3">
-        <CompletePlayerSetsComponent Players="GetPlayers()" />
+        <CompletePlayerSetsComponent SetCommand=SetChosenCommand Players="GetPlayers()" />
     </GridItem>
 
 </GridContainer>
