Fixed bug with wrong player being chosen. Also, fixed some readability issues with text showing rents owed.

--- a/Games/DealCardGame/Blazor/CompletePlayerSetsComponent.razor
+++ b/Games/DealCardGame/Blazor/CompletePlayerSetsComponent.razor
@@ -20,7 +20,7 @@
                                         HasHouse=hasHouse
                                         Rent=rentOwed
                                         Completed=completed
-                                        PlayerId="item.row" />
+                                        PlayerId="@GetPlayerId(item.row)" />
         </GridItem>
     </GridRepeater>
 </GridContainer>
