Completed processes for houses and hotels. Plus more advanced processes for collecting payments. Which means I can later test the birthday and debt collector.

--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -11,6 +11,11 @@
     <TestCardComponent />
     return;
 }
+@if (_gameContainer.PersonalInformation.NeedsPayment)
+{
+    <MakePaymentComponent />
+    return;
+}
 <GridContainer Rows="@Rows" ColumnGap="5px" RowGap=5px Columns="auto 35vw 1fr">
     <GridItem Row="1" Column="1">
         <StackLayout>
