--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -48,6 +48,19 @@
         {
             <CardGraphicsBlazor DeckObject="_vmData.ShownCard" TargetHeight="15vh" />
         }
+        @if (_vmData.ChosenPlayer is not null)
+        {
+            <div style="font-size: 2rem;">
+                @_vmData.ChosenPlayer
+            </div>
+        }
+        @if (_gameContainer.SaveRoot.GameStatus == EnumGameStatus.ConfirmPayment)
+        {
+            <HandBlazor TargetContainerSize="35vw" Hand="_vmData.Payments" />
+            <div>
+                <GameButtonComponent Display="Resume" CommandObject="ResumeCommand" />
+            </div>
+        }
     </GridItem>
     <GridItem Column="3" Row="1" RowSpan="3">
         <CompletePlayerSetsComponent SetCommand=SetChosenCommand Players="GetPlayers()" />
