--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -48,11 +48,17 @@
         {
             <CardGraphicsBlazor DeckObject="_vmData.ShownCard" TargetHeight="15vh" />
         }
+        
+
         @if (_vmData.ChosenPlayer is not null)
         {
             <div style="font-size: 2rem;">
                 @_vmData.ChosenPlayer
             </div>
+            @if (_vmData.StolenCards.HandList.Count > 0)
+            {
+                <HandBlazor TargetContainerSize="35vw" Hand="_vmData.StolenCards" />
+            }
         }
         @if (_gameContainer.SaveRoot.GameStatus == EnumGameStatus.ConfirmPayment)
         {
