--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -44,6 +44,11 @@
                               Columns="_scores"
                               Players="_gameContainer.SaveRoot.PlayerList" />
         </div>
+        @if (_gameContainer.PersonalInformation.RentInfo.RentCategory == EnumRentCategory.NeedChoice)
+        {
+            <StartRentComponent />
+            return;
+        }
         @if (_vmData.ShownCard is not null)
         {
             <CardGraphicsBlazor DeckObject="_vmData.ShownCard" TargetHeight="15vh" />
