Completed basics for collecting rent.  The next step is to actually test collecting rent from somebody.

--- a/Games/DealCardGame/Blazor/StartRentComponent.razor
+++ b/Games/DealCardGame/Blazor/StartRentComponent.razor
@@ -1,3 +1,13 @@
-﻿<div>
-    Start Rent Processes
+﻿@if (DataContext!.NeedsRentPicker)
+{
+    <div>
+        Start Rent Picker Processes
+    </div>
+}
+<div style="background-color: @DataContext.ColorChosen.WebColor; font-size: 3rem;font-family: Lato; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: black;">
+    Rent Charged: @DataContext.RentOwed
+</div>
+<div>
+    <GameButtonComponent Display="Cancel" CommandObject="CancelCommand" />
+    <GameButtonComponent Display="Collect Rent" CommandObject="ProcessRentCommand" />
 </div>
