Completed rent processes.

--- a/Games/DealCardGame/Blazor/StartRentComponent.razor
+++ b/Games/DealCardGame/Blazor/StartRentComponent.razor
@@ -1,10 +1,10 @@
 ﻿@if (DataContext!.NeedsRentPicker)
 {
-    <div>
-        Start Rent Picker Processes
-    </div>
+    <EnumPickerBlazor E="EnumRentCategory" Context="piece" Rows=3 TargetSize="10vh" ListPicker="DataContext.VMData.RentPicker">
+        <RentOptionGraphicsComponent RentCategory="piece" />
+    </EnumPickerBlazor>
 }
-<div style="background-color: @DataContext.ColorChosen.WebColor; font-size: 3rem;font-family: Lato; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: black;">
+<div style="background-color: @DataContext.ColorChosen.WebColor; font-size: 4rem;font-family: Lato; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: black;">
     Rent Charged: @DataContext.RentOwed
 </div>
 <div>
