--- a/Games/DealCardGame/_Imports.razor
+++ b/Games/DealCardGame/_Imports.razor
@@ -24,3 +24,5 @@
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SpecializedFrames.SingleMiscPiles;
 @using BasicGameFrameworkLibrary.Core.RegularDeckOfCards;
 @using BasicBlazorLibrary.Components.Repeaters
+@using BasicGameFrameworkLibrary.Blazor.BasicControls.ChoicePickers
+@using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
