--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -50,6 +50,11 @@
             <StartRentComponent />
             return;
         }
+        @if (_gameContainer.PersonalInformation.StealInfo.StartStealing)
+        {
+            <StealingComponent />
+            return;
+        }
         @if (_vmData.ShownCard is not null)
         {
             <CardGraphicsBlazor DeckObject="_vmData.ShownCard" TargetHeight="15vh" />
