--- a/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
+++ b/Games/DealCardGame/Blazor/Views/DealCardGameMainView.razor
@@ -55,6 +55,12 @@
             <StealingComponent />
             return;
         }
+        @if (_gameContainer.SaveRoot.GameStatus == EnumGameStatus.StartDebtCollector)
+        {
+            <ListChooserBlazor ListPicker="DataContext.VMData.PlayerPicker" TotalColumns="1" TextHeight="6vh" />
+            <GameButtonComponent Display="Choose Player" CommandObject="ChoosePlayerCommand" />
+            return;
+        }
         @if (_vmData.ShownCard is not null)
         {
             <CardGraphicsBlazor DeckObject="_vmData.ShownCard" TargetHeight="15vh" />
@@ -73,7 +79,7 @@
         }
         @if (_gameContainer.SaveRoot.GameStatus == EnumGameStatus.ConfirmPayment)
         {
-            <HandBlazor TargetContainerSize="35vw" Hand="_vmData.Payments" />
+            <HandBlazor TargetContainerSize="35vw" Hand="_vmData.ReceivedPayments" />
             <div>
                 <GameButtonComponent Display="Resume" CommandObject="ResumeCommand" />
             </div>
