--- a/Games/DealCardGame/_Imports.razor
+++ b/Games/DealCardGame/_Imports.razor
@@ -26,3 +26,4 @@
 @using BasicBlazorLibrary.Components.Repeaters
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.ChoicePickers
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.GamePieces
+@using BasicBlazorLibrary.Components.RenderHelpers
