--- a/Games/DealCardGame/Blazor/OriginalActionComponent.razor
+++ b/Games/DealCardGame/Blazor/OriginalActionComponent.razor
@@ -3,8 +3,7 @@
 {
     <div>
         <DisplayStolenSetComponent Color="SaveRoot!.OpponentColorChosen" 
-                                   PlayerToDisplay="OpponentPlayer"
-                                   Command="Command" />
+                                   PlayerToDisplay="OpponentPlayer" />
     </div>
     
 }
