Completed processes for just say no for stealing.

--- a/Games/DealCardGame/Blazor/JustSayNoComponent.razor
+++ b/Games/DealCardGame/Blazor/JustSayNoComponent.razor
@@ -15,9 +15,7 @@ else if (DataContext!.ActionCard.ActionCategory == EnumActionCategory.DealBreake
 }
 else if (DataContext!.ActionCard.ActionCategory == EnumActionCategory.SlyDeal)
 {
-    <div>
-        Start Of Sly Deal
-    </div>
+    <DisplayStolenPropertyComponent PlayerToDisplay="DataContext.GetSelf" />
 }
 else
 {
