--- a/Games/DealCardGame/Blazor/OriginalActionComponent.razor
+++ b/Games/DealCardGame/Blazor/OriginalActionComponent.razor
@@ -1,13 +1,19 @@
-﻿<CardGraphicsBlazor TargetHeight="20vh" DeckObject="ActionCard" />
+﻿<CardGraphicsBlazor TargetHeight="15vh" DeckObject="ActionCard" />
 @if (ActionCard!.ActionCategory == EnumActionCategory.DealBreaker)
 {
     <div>
         <DisplayStolenSetComponent Color="SaveRoot!.OpponentColorChosen" 
                                    PlayerToDisplay="OpponentPlayer" />
     </div>
-    
+
+}
+else if(ActionCard!.ActionCategory == EnumActionCategory.SlyDeal)
+{
+    <div>
+        <DisplayStolenPropertyComponent PlayerToDisplay="OpponentPlayer" />
+    </div>
 }
 else
 {
-    <div>Only deal breakers are supported for now</div>
+    <div>Not supported for now</div>
 }
